--- a/index.html
+++ b/index.html
@@ -1,4 +1,2 @@
 <!DOCTYPE html>
-<a href = https://flatironschool.com>
-  Flatiron School
-</a>
+<a href = https://flatironschool.com>Flatiron School</a>
